# rust-diesel-oltp-benchmark

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  benchmark.md
if_types/: Cargo.toml
if_types/src/: lib.rs
migrations/2010-02-01-000000_tpcc/: up.sql
rte/: Cargo.toml  README.md  lambda_function.py
rte/src/: main.rs
src/: main.rs  tpcc_models.rs
sut/: Cargo.toml  README.md
sut/src/: customer.rs  delivery.rs  lib.rs  new_order.rs  order_status.rs  payment.rs  perf.rs  setup.rs  spawn_transaction.rs  stock_level.rs
tpcc_models/: Cargo.toml  diesel.toml
tpcc_models/migrations/2010-02-01-000000_tpcc/: up.sql
tpcc_models/migrations_pg/2010-02-01-000000_tpcc/: down.sql
tpcc_models/migrations_sqlite/2010-02-01-000000_tpcc/: up.sql
tpcc_models/src/: lib.rs  models.rs  pg.rs  schema.rs  schema_pg.rs  schema_sqlite.rs  sqlite.rs  transaction.rs
tpcc_rand/: Cargo.toml
tpcc_rand/src/: lib.rs
