[package]
name = "diesel-tpc-c"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "sut",
    "tpcc_models"
]

[features]
default = ["sqlite"]
mysql = ["tpcc_models/mysql"]
postgres = ["tpcc_models/postgres"]
sqlite = ["tpcc_models/sqlite"]

[dependencies]
tpcc_models = { path = "tpcc_models" }

[workspace.dependencies]
chrono = { version="0.4", default-features=false, features=["clock", "std"] }
dotenvy = "0.15"
env_logger = { version = "0.8", default-features=false }
rand = "0.8"
serde = { version="1", features=["derive"] }
serde_json = "1"
tokio = { version="1", default-features=false, features=["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
strip = "symbols"

