[workspace]
resolver = "2"
members = [
    "if_types",
    "rte",
    "sut",
    "tpcc_models",
    "tpcc_rand"
]

[workspace.dependencies]
chrono = { version="0.4", default-features=false, features=["clock", "serde", "std"] }
dotenvy = "0.15"
env_logger = { version = "0.8", default-features=false }
serde = { version="1", features=["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version="1", default-features=false, features=["macros", "rt", "rt-multi-thread"] }

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
strip = "symbols"
