[package]
name = "rte"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version="4", features=["derive"] }
env_logger.workspace = true
if_types = { path="../if_types" }
reqwest = { version="0.12", features=["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
