[package]
name = "sut"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "sut"
workspace = ".."

[lib]
path = "src/lib.rs"

# SUT server binary running on localhost
[[bin]]
name = "sut"
path = "src/bin/sut.rs"

# SUT server binary for AWS Lambda
[[bin]]
name = "bootstrap"
path = "src/bin/lambda_bootstrap.rs"

[features]
default = ["sqlite"]
postgres = ["tpcc_models/postgres"]
sqlite = ["tpcc_models/sqlite"]

[dependencies]
axum = { version="0.7" }
env_logger.workspace = true
log.workspace = true
if_types = { path="../if_types" }
lambda_http = { version="0.13", default-features=false, features=["apigw_http"] }
num_cpus = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tpcc_models = { path="../tpcc_models" }
