[package]
name = "tpcc_models"
version = "0.1.0"
edition = "2021"
workspace = ".."
publish = false

[features]
default = ["sqlite"]
postgres = ["diesel/postgres"]
sqlite = ["dep:libsqlite3-sys", "diesel/sqlite"]

[dependencies]
chrono.workspace = true
diesel = { version="2", default-features=false, features=["32-column-tables", "chrono", "numeric", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2" }
libsqlite3-sys = { version = "0.25", features= ["bundled"], optional=true }
log.workspace = true
tpcc_rand = { path="../tpcc_rand" }